--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,3 +46,11 @@ services:
     environment:
       PMA_HOST: db
       MYSQL_ROOT_PASSWORD: ${MARIADB_ROOT_PASSWORD}
+  db-face:
+    image: dbface/dbface-docker
+    depends_on:
+      - db
+    ports:
+      - '5020:80'
+    volumes:
+      - './data/dbface:/var/www/user'
