--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,8 @@ services:
     volumes:
       - "./data/mysql:/var/lib/mysql:rw"
       - "./data/backup:/var/lib/backup:rw"
+    ports:
+      - "3306:3306"
   phpmyadmin:
     depends_on:
       - db
